--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -61,6 +61,9 @@
           "word": { "content": "$1" }
         }
     },
+    "prompt_during_edit": {
+        "message" : "Drag areas to move color-filled areas. Click the setting icon again to freeze the adjusted positions. Hold down control key to change the right edge and the bottom edge."
+    },
     "oauth_not_authenticated":{
         "message" : "Not authenticated"
     },
