--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -59,6 +59,9 @@
           "word": { "content": "$1" }
         }
     },
+    "prompt_during_edit": {
+        "message" : "塗りつぶし領域をドラッグして移動してください。設定アイコンを再度押すと移動箇所で固定されます。コントロールキーを押し続けると、右側(幅)と下側(高さ)を変更できます"
+    },
     "oauth_not_authenticated":{
         "message" : "認証されていません"
     },
