--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -60,7 +60,7 @@
         }
     },
     "prompt_during_edit": {
-        "message" : "塗りつぶし領域をドラッグして移動してください。設定アイコンを再度押すと移動箇所で固定されます。コントロールキーを押し続けると、右側(幅)と下側(高さ)を変更できます"
+        "message" : "塗りつぶし領域をドラッグして移動してください。設定アイコンを再度押すと移動箇所で固定されます。コントロールキーを押し続けると、右側(幅)と下側(高さ)を変更できます。<br>音声認識の間違いを記録するShow unrecognized word option はオフにしてください。有効な場合にはこの範囲は移動できません"
     },
     "oauth_not_authenticated":{
         "message" : "認証されていません"
